--- a/LO/LO4/index.html
+++ b/LO/LO4/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arrays</title>
+  <title>JS</title>
 </head>
 <body>
   <h1>JS Lesson</h1>
 
-  <script src="function.js"></script>
+
+  <div style="width: 10000px"></div>
+
+  <script src="global.scope.js"></script>
 
 
   </script>
