--- a/LO/LO3/index.html
+++ b/LO/LO3/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arrays</title>
+  <title>JS</title>
 </head>
 <body>
-  <h1>javascript</h1>
+  <h1>JS Lesson</h1>
 
-  <script src="switch.js"></script>
+  <script src="function.js"></script>
 
 
   </script>
