--- a/LO/LO5/index.html
+++ b/LO/LO5/index.html
@@ -55,6 +55,7 @@
                                     <i class="fa fa remove"></i>
                                 </a>
                             </li>
+
                         </ul>
                         <a href="" class="clear-tasks btn purple">Clear Tasks</a>
                     </div>
@@ -63,12 +64,13 @@
         </div>
     </div>
  
+    
   <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
   crossorigin="anonymous"></script>
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-     <script src="getElementById.js"></script>
+     <script src="create-element.js"></script>
 </body>
 </html>
